--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.21.3",
     "sweetalert2": "^11.10.3",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "vite": "^5.2.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -32,7 +33,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "tailwindcss": "^3.4.1"
   }
 }
