--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# recapcha key = 6LfX1-wpAAAAAGa-u5Wf2Cn45NFilxYDsDWcAHSv
+
+# recapcha secret key = 6LfX1-wpAAAAAABCWmhWK_-NT8af0vaevhARqN-y
