--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,15 @@
     "json-server": "^1.0.0-alpha.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.21.3",
     "sweetalert2": "^11.10.3",
     "swiper": "^11.0.5",
     "vite": "^5.2.12"
-  },
+  }, 
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
